--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -3,7 +3,9 @@
 html, body {
     font-family: 'Playfair Display', serif;
     font-family: 'Poppins', sans-serif;
+    width: 90vw;
     margin: 0;
+    padding: 10px;
 }
 
 /* Background images */
@@ -105,29 +107,36 @@ img.bg-img-50 {
 }
 
 .navbar .icon {
-    height: 15px;
+    transition-duration: 0.25s;
+    height: 20px;
     display: none;
 }
+
 
 /* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the navbar (.icon) */
 @media screen and (max-width: 600px) {
     .navbar a:not(.active) {display: none;}
     .navbar a.icon {
-    float: right;
-    display: block;
+        display: block;
+        position: relative;
+        float: right;
+    }
+    .navbar a.icon:active {
+        transform: translateX(-150px);
     }
 }
 
 /* The "responsive" class is added to the navbar with JavaScript when the user clicks on the icon. This class makes the navbar look good on small screens (display the links vertically instead of horizontally) */
 @media screen and (max-width: 600px) {
-
     .navbar.responsive a.icon {
-    position: relative;
-    right: 5%;
-    bottom: 0;
+        position: relative;
+        bottom: 0;
+        float: right;
+    }
+    .navbar.responsive a.icon:active {
+        transform: translateX(25px);
     }
     .navbar.responsive a {
-    float: none;
     display: block;
     text-align: left;
     }
